Bugfix (card layout 14): apply button was not centered.

--- a/packages/ketchup/src/components/kup-card/standard/kup-card-standard-14.scss
+++ b/packages/ketchup/src/components/kup-card/standard/kup-card-standard-14.scss
@@ -114,6 +114,8 @@
 
   #apply {
     display: none;
+    margin: auto;
+
     &.visible {
       display: block;
     }
